2024-01-17 (did not using ajax)
2024-01-17 (did not using ajax)

--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,11 @@ canvas {
   align-items: center;
 }
 
+#time {
+  position: absolute;
+  right: 10%;
+}
+
 .game_canvas {
   width: 100%;
   height: 100%;
